--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -30,3 +30,10 @@ jobs:
 
       - name: Terraform Validate
         run: terraform validate
+        
+      - name: List files
+        run: ls -R
+
+
+
+
